2001-11-07  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
	  man/smtp.8:
	    Trying to figure out what to do with problematic
	    case on a Solaris 2.6 system speaking to some Win-NT
	    SMTP server application which looses all but the
	    first two TCP frames it receives.  The Solaris goes
	    to retransmit backoff from which it never really
	    recovers, and the write connection times out.
	    Implemented thus a '-w 1000' option to define the
	    value of the socket option SO_SNDBUF.
	
2001-10-25  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
	    - edge comparisons in time handling code cause
	      short (1 sec) busy-loopings every now and then.
	    - When MAIL FROM results a 5xx status with immediate
	      closure of the socket following that report,

	* transports/smtp/smtptls.c, transports/smtp/smtp.h,
	  transports/smtp/smtp.c, transports/libta/ctlopen.c,
	  transports/libta/tasyslog.c, include/ta.h:
	    Move the "taspoolid()" invokation into ctlopen()
	    processing from within  tasyslog()  call.
	    At  smtp,  copy also the "->taspoolid" pointer
	    field into the SmtpState structure.

2001-10-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/msgerror.c, scheduler/scheduler.c,
	  scheduler/scheduler.h, scheduler/update.c:
	    Added couple  zsyslog()  calls to conditionally syslog
	    when scheduler has completed processing of a message.

	* router/rfc822.c:
	    Added a bit of double-colons on squirel() and
	    reject() calls when the thing is FATAL.
	    (Its me again being dense and forgetting documentation
	    elsewere, but the ":error-on-error" tag looked so neat...)

	* router/libdb/bsdbtree.c, router/libdb/bsdhash.c,
	  smtpserver/policytest.c, utils/makedb/dblook.c,
	  utils/makedb/makedb.c:
	    Reworked SleepyCat DB 1.x/2.x/3.x conditionals.

2001-10-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>